	more memory leak fixes by Vera Albrecht <albrecht@danalyse.de>

	* configure.in src/xspice/icm/* src/xspice/lib/*.cm 
	src/xspice/Makefile.am :
	Added some easy to use makefiles for codemodels and reordered
	Removed binary files
	Added icm to build list

	* src/xspice/icm/{analog,digital,xtradev,xtraevt}:
	added the codemodels from xspice in the same
	structure as spiceopus
	
	
2003-07-18 Vera Albrecht <albrecht@danalyse.de>

	* src/{main.c,tclspice.c}
	src/frontend/{Makefile.am,control.c,control.h,display.c,dotcards.c,
	hcomp.c,hpgl.c,outitf.c,parse.c,postcoms.c,postsc.c,runcoms.c,
	spiceif.c,variable.c,variable.h,parser/complete.c,plotting/pvec.c}
	src/include/{cktdefs.h,ngspice.h}
	src/misc/{ivars.c,string.c,stringutil.h}
	src/spicelib/analysis/{acan.c,ckt.h,dcop.c}
	src/spicelib/devices/bsim3/b3temp.c
	src/spicelib/parser/{ifnewuid.c,inp2dot.c,inperror.c} :
	Memory leaks and some WINDOWS compile fixes.

2003-07-17 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/{subckt.c,vectors.c} 
	src/spicelib/analysis/dctran.c 
	src/spicelib/parser/inperror.c 
	src/xspice/idn/idndig.c src/xspice/mif/mif_inp2.c :
	More memory leak fixes

	* configure.in src/xspice/xspice.c :
	Fix compile problems with garbage collector

	 * configure.in :
	 Change --enable-tcl to --with-tcl[=dir] for non-std 
	 install setup.

2003-07-17 Steven Borley <sjb@salix.demon.co.uk>

	* src/frontend/resource.c src/frontend/parser/complete.c
	src/spicelib/devices/txl/txlload.c :
	#ifdef fixes to get ngspice to compile on Mac OSX

2003-07-16 Vera Albrecht <albrecht@danalyse.de>

	* frontend/{device.c,parse.c,vectors.c,com_compose.c} :
	More memory leaks closed in utility commands and functions.

2003-07-16 Stefan Jones <stefan.jones@multigig.com>

	* src/frontend/{com_compose.c,cpitf.c,device.c,subckt.c,vectors.c}
	src/frontend/plotting/plotit.c src/include/ngspice.h
	src/spicelib/parser/{inp2dot.c,inp2r.c,inpdomod.c,inpdpar.c,inpgmod.c,inppas3.c} :