@@ -5,7 +5,7 @@ dnl Create a configuration header
 AM_CONFIG_HEADER(config.h)
 
 dnl Initialize automake stuff
-AM_INIT_AUTOMAKE(ng-spice-rework,14)
+AM_INIT_AUTOMAKE(tclspice,0.2.13)
 
 dnl --enable-ftedebug : enable frontend debug macros
 AC_ARG_ENABLE(ftedebug,
@@ -348,7 +348,12 @@ else
 fi
 
 AC_DEFINE_UNQUOTED(NGSPICEBINDIR, "`echo $dprefix/bin`" )
+
+if test "x$with_tcl" != "x" -a "$with_tcl" != "no" ; then
+AC_DEFINE_UNQUOTED(NGSPICEDATADIR, "`echo $dprefix/share/tclspice`" )
+else
 AC_DEFINE_UNQUOTED(NGSPICEDATADIR, "`echo $dprefix/share/ng-spice-rework`" )
+fi
 AC_DEFINE_UNQUOTED(NGSPICEBUILDDATE, "`date`" )
 
 
