@@ -5,14 +5,14 @@
 #include "conf.h"
 
 char	Spice_Version[ ] = VERSION;
-char	Spice_Notice[ ] = "Please submit bug-reports to: ng-spice-bugs@ieee.ing.uniroma1.it";
+char	Spice_Notice[ ] = "Please submit bug-reports to: ngspice-devel@lists.sourceforge.net";
 char	Spice_Build_Date[ ] = NGSPICEBUILDDATE;
 char	*Spice_Exec_Dir	= NGSPICEBINDIR;
 char	*Spice_Lib_Dir	= NGSPICEDATADIR;
 char	*Def_Editor	= "vi";
 int	AsciiRawFile	= 0;
 
-char	*Bug_Addr	= "ng-spice-bugs@ieee.ing.uniroma1.it";
+char	*Bug_Addr	= "ngspice-devel@lists.sourceforge.net";
 char	*Spice_Host	= "";
 char	*Spiced_Log	= "";
 
